--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
 	"minimum-stability": "dev",
 	"require" : {
 		"php" : ">=7.0",
-		"doctrine/dbla": "2.*",
+		"doctrine/dbal": "2.*",
 		"gollumsf/enum": "1.*"
 	},
 	"autoload" : {
