--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
 	"minimum-stability": "dev",
 	"require" : {
 		"php" : ">=7.0",
-		"doctrine/dbal": ">=2",
+		"doctrine/dbal": "^2|^3",
 		"gollumsf/enum": "^2"
 	},
 	"autoload" : {
