--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
 		"symfony"
 	],
 	"homepage" : "https://github.com/GollumSF/doctrine-enum",
-	"license" : "GPL-3.0-or-later",
+	"license" : "MIT",
 	"authors" : [{
 			"name" : "Damien Duboeuf",
 			"email" : "smeagolworms4@gmail.com"
